fix max width on tablet size

--- a/src/styles/lightbox.css
+++ b/src/styles/lightbox.css
@@ -71,7 +71,6 @@
     .mySlides,
     .modal-content {
         max-height: 55vh;
-        max-width: 800px;
     }
 
     .mySlides img {
